examples/test/testpolicy10814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10814
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key37: value2
      key49: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value34
      podSelector:
        matchLabels:
          key34: value49
          key21: value11
          key42: value11
